@@ -1,4 +1,8 @@
-﻿drkns 19.06.2014 08:46:39 +0200 - build 3954
+﻿drkns 19.06.2014 09:33:50 +0200 - build 3955
+
+1. Потенциальная проблема в SyncedQueue и пара мелочей в Thread и MultiWaiter для улучшения читаемости.
+
+drkns 19.06.2014 08:46:39 +0200 - build 3954
 
 1. В 3842 погнулся запускатель в некоторых хитрых случаях.
 
